glFusion ChangeLog

v1.1.6
------
- Ensure topic selection is presistent when viewing admin story list
- Allow plugin comments to be included in search results
- Tweaks to contact user / author templates; consistent widths and display
- Allow custom/functions.php in theme directory
- Ensure enabling / removing configuration options clears the config
  cache file
- Moved documentation into language directories
- Added PLG_getConfigElementHelp API call
- Full support for PLG_itemSaved() and PLG_itemDeleted() APIs
- Add author to RSS 2.0 syndication feeds for articles
- Do not error when trying to upgrade a disabled bundled plugin
- Security enhancements to the installation scripts
- Better support for legacy plugins
- Ensure template class if available when logging errors
- Ensure character encoding is properly passed to all htmlentities calls
- Add custom_registration field to allowed fields in fusionrescue.php
- Replaced ereg functions for improved PHP 5.3.0 support
- Accessibility updates
- Updated German Language files
- Added the ability to pass additional parsers and code handlers to
  lib-bbcode.

Calendar Plugin
---------------
- Maintain the owner of events placed in the submission queue

FileMgmt Plugin
---------------
- FileMgmt did not honor the comment setting for each file and always
  displayed the comment bar.
- Do not display the upload form for anonymous users if upload public
  set to false.

Forum Plugin
------------
- Fixed issue where the index page would incorrectly display Today
  as the last post date when in fact that wasn't true.
- Fixed invalid index on rating_assoc table (bumped version to 3.1.5)
- Fix to allow Smiley plugin to work with WYSIWYG editor
- Ensure the profile edit functions return the proper value
- Filter memberslist to ensure only registered users are shown

Links Plugin
------------
- If login is required and user is not logged in, display a message that
  login is required instead of simply redirecting to the index page.