@@ -2215,23 +2215,12 @@ function plugin_dopluginsearch_mediagallery($query, $datestart, $dateend, $topic
         $sql .= ' AND hidden=0 ';
     }
 
-    if (!empty($datestart) && !empty($dateend))
-    {
-        $delim = substr($datestart, 4, 1);
-        if (!empty($delim))
-        {
-            $DS = explode($delim, $datestart);
-            $DE = explode($delim, $dateend);
-            $startdate = mktime(0,0,0,$DS[1],$DS[2],$DS[0]);
-            $enddate = mktime(23,59,59,$DE[1],$DE[2],$DE[0]);
-            $sql .= "AND (m.media_time BETWEEN '$startdate' AND '$enddate') ";
-        }
-    }
     if (!empty ($author))
         $sql .= "AND (m.media_user_id = '$author') ";
 
     $search = new SearchCriteria('mediagallery', 'Media Gallery');
     $columns = array('m.media_desc','m.media_title');
+    $sql .= $search->getDateRangeSQL('AND', 'm.media_time', $datestart, $dateend);
     list($sql,$ftsql) = $search->buildSearchSQL($keyType, $query, $columns, $sql);
     $search->setSQL($sql);
     $search->setFTSQL($ftsql);
@@ -2271,22 +2260,13 @@ function plugin_dopluginsearch_comment_mediagallery($query, $datestart, $dateend
     $sql .= "WHERE (c.type='mediagallery') AND (u.uid = c.uid) ";
     $sql .= COM_getPermSQL('AND') . ' ';
 
-    if (!empty($datestart) && !empty($dateend)) {
-        $delim = substr($datestart, 4, 1);
-        if (!empty($delim)) {
-            $DS = explode($delim, $datestart);
-            $DE = explode($delim, $dateend);
-            $startdate = mktime(0,0,0,$DS[1],$DS[2],$DS[0]);
-            $enddate = mktime(23,59,59,$DE[1],$DE[2],$DE[0]);
-            $sql .= "AND (c.date BETWEEN '$startdate' AND '$enddate') ";
-        }
-    }
     if (!empty($author)) {
         $sql .= "AND (c.uid = '$author') ";
     }
 
-    $search_c = new SearchCriteria('comments', $LANG09[66]);
+    $search_c = new SearchCriteria('comments', 'Media Gallery > '.$LANG09[66]);
     $columns = array('comment','c.title');
+    $sql .= $search_c->getDateRangeSQL('AND', 'UNIX_TIMESTAMP(c.date)', $datestart, $dateend);
     list($sql,$ftsql) = $search_c->buildSearchSQL($keyType, $query, $columns, $sql);
     $search_c->setSQL($sql);
     $search_c->setFTSQL($ftsql);
